Squashed commit of the following:
commit 7e104521acdf649883e7c9bdba852f6e058b378b
Author: Roánie <badlands.hugo@gmail.com>
Date:   Sun Oct 24 18:06:17 2021 +0200

    Removed test which should be wrong. We don't however not have the time to calculate the correct value.

commit 8e4826437a4b79b12d5d311a8bd0f1c820c985cc
Merge: 34d9329 e3a97aa
Author: funcorange <love.njal@telia.com>
Date:   Sun Oct 24 16:32:39 2021 +0200

    Merge remote-tracking branch 'origin/development' into development

commit 34d9329326aa26f89fa5b2a04fd97c15e7b224f5
Author: funcorange <love.njal@telia.com>
Date:   Sun Oct 24 16:32:30 2021 +0200

    Corrected order of transformations

commit e3a97aab79ddd20b53e4e0bc0bdbfff150f1370f
Merge: c9cfa0c 7cf773e
Author: Elias Ersson <32256443+Eliasers@users.noreply.github.com>
Date:   Sun Oct 24 16:24:50 2021 +0200

    Merge branch 'development' of https://github.com/Spektria/C7_TDA367 into development

commit c9cfa0cc6a5ef0eac962f0a697169e89a0d69261
Author: Elias Ersson <32256443+Eliasers@users.noreply.github.com>
Date:   Sun Oct 24 16:24:46 2021 +0200

    Updated name to C7Paint

commit 7cf773ee6ef4609ab61690f78de92d27c2c204fc
Merge: 92e043c 6f05083
Author: Elias Ersson <eliasersson@hotmail.com>
Date:   Sun Oct 24 16:14:32 2021 +0200

    Merge branch 'development' of https://github.com/Spektria/C7_TDA367 into development

commit 92e043c1600a2ebceeccf82075aadf71e494dd90
Author: Elias Ersson <eliasersson@hotmail.com>
Date:   Sun Oct 24 16:14:31 2021 +0200

    Removed unused menu bar options

commit 48ce7cea1d473420988f43e0e92a7803c96c7bdb
Author: Elias Ersson <eliasersson@hotmail.com>
Date:   Sun Oct 24 16:14:23 2021 +0200

    Improved documentation of bad code

commit 6f050836e9fc40c9cf7676ec75c841a736585998
Merge: 57dbf4d 40bbc18
Author: Roánie <badlands.hugo@gmail.com>
Date:   Sun Oct 24 00:59:12 2021 +0200

    Merge remote-tracking branch 'origin/development' into development

commit 57dbf4dbb79d4c878b1b0b4da3c19471cdd9c2f4
Author: Roánie <bad